# mcp-server-turkanime-indirici

./: .gitignore  README.md  claude-code-promptu.md  turkanime-api-dokumantasyon.md
turkanime-mcp/: README.md  pyproject.toml  requirements.txt  turkanime_mcp.py
turkanime-mcp/tests/: test_ffmpeg.py  test_p2.py  test_regressions.py  test_resume.py  test_search.py  test_state.py  test_tools.py  test_verify_library.py
